[package]
name = "xyz"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.3"
axum-extra = "0.10.1"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "time"] }
time = "0.3.41"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = [
  "compression-gzip",
  "fs",
  "trace",
] }
tracing = "0.1.41"
ts-rs = "10.1.0"
validator = "0.20.0"
