[package]
name = "xyz"
version = "0.1.0"
edition = "2024"

[dependencies]
Inflector = "0.11.4"
axum = "0.8.3"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "time"] }
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = [
  "compression-gzip",
  "fs",
  "trace",
] }
tracing = "0.1.41"
ts-rs = "11.0.0"
validator = "0.20.0"
