[package]
name = "axtra_macros"
version = "0.2.1"
edition = "2024"
description = "Derive macros for Axtra"
repository = "https://github.com/imothee/axtra"
license = "MIT"
keywords = ["axum", "astro", "web", "notifications", "errors"]

[lib]
proc-macro = true

[dependencies]
Inflector = "0.11.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
